@@ -2,7 +2,7 @@
 #
 # Win32::API - Perl Win32 API Import Facility
 # ^^^^^^^^^^
-# Version: 0.48 (20 Feb 2008)
+# Version: 0.49 (20 Feb 2008)
 # by Aldo Calpini <dada@perl.it>
 #
 # Current maintainer:
